@@ -45,11 +45,7 @@ void  ephy_state_add_paned	(GtkWidget *paned,
 				 const char *name,
 				 int default_width);
 
-void  ephy_state_add_expander	(GtkWidget *expander,
-				 const char *name,
-				 gboolean default_state);
-
-void  ephy_state_add_toggle	(GtkWidget *toggle,
+void  ephy_state_add_expander	(GtkWidget *widget,
 				 const char *name,
 				 gboolean default_state);
 
