@@ -2411,7 +2411,7 @@
   (c-name "ephy_state_add_expander")
   (return-type "none")
   (parameters
-    '("GtkWidget*" "expander")
+    '("GtkWidget*" "widget")
     '("const-char*" "name")
     '("gboolean" "default_state")
   )
