@@ -2,6 +2,16 @@
 
 	* lib/ephy-state.h
 	* lib/ephy-state.c
+	* src/epiphany.defs
+	* src/bookmarks/ephy-bookmark-properties.c
+	
+	Combined very similar functions into one.
+	Made the 'similar' bookmark count update immediately at start.
+	
+2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* lib/ephy-state.h
+	* lib/ephy-state.c
 	* src/ephy-shell.c
 	
 	Forgotten files from previous two commits.
